# geoInf

./: CMakeCache.txt  CMakeLists.txt  GUI  Makefile  README.md  TUI  cmake_install.cmake  log.txt  main  netController  tuiNet
clients/geoInfWeb/: Cargo.toml
clients/webR/: Trunk.toml  index.html
clients/webR/src/: main.rs
src/: GUIclient.c  TUIclient.c
src/clients/GUI/: GUIclient.c
src/clients/TUI/: TUIclient.c
src/clients/tuiNet/: tuiNet.c
src/clients/webR/: Cargo.toml
src/clients/webR/src/: main.rs
src/database/: dataController.c  dataController.h  geoInf.db  info.md  netController.c  netController.h
src/include/: T0.h  cm_string.c  cm_string.h  utility.c  utility.h
src/shaders/imageRender/: main.fs  main.vs
