cmake_minimum_required(VERSION 3.25.0)
project("geoInf")
add_executable("GUI" "src/GUIclient.c" "src/include/utility.c" "src/database/dataController.c")
add_executable("TUI" "src/TUIclient.c" "src/include/utility.c" "src/database/dataController.c")
include_directories(/usr/include)
target_link_libraries(GUI PUBLIC GL GLEW glfw sqlite3)
target_link_libraries(TUI PUBLIC GL GLEW glfw sqlite3)