cmake_minimum_required(VERSION 3.25.0)
project("geoInf")
add_executable("GUI" "src/clients/GUI/GUIclient.c" "src/include/utility.c" "src/include/cm_string.c" "src/database/dataController.c")
add_executable("TUI" "src/clients/TUI/TUIclient.c" "src/include/utility.c" "src/include/cm_string.c" "src/database/dataController.c")
add_executable("netController" "src/include/utility.c" "src/database/netController.c" "src/database/dataController.c" "src/include/cm_string.c")
add_executable("tuiNet" "src/clients/tuiNet/tuiNet.c" "src/include/utility.c" "src/database/dataController.c" "src/include/cm_string.c")
include_directories(/usr/include)
target_link_libraries(GUI PUBLIC GL GLEW glfw sqlite3)
target_link_libraries(TUI PUBLIC sqlite3)
target_link_libraries(netController PUBLIC sqlite3)
target_link_libraries(tuiNet PUBLIC sqlite3)